@@ -9,6 +9,7 @@
  * (See the file 'LICENCE'.)
  */
 #include "xmldsig.h"
+#include "xmldsig-internal.h"
 
 #define WrapXmlDoc(klass, obj, doc) do { \
     if (!(doc)) { \
@@ -30,25 +31,21 @@
 #define xmldsig_params_get_key(params)			rb_hash_aref((params), ID2SYM(sKEY))
 #define xmldsig_params_get_cert(params)			rb_hash_aref((params), ID2SYM(sCERT))
 #define xmldsig_params_get_ca_certs(params)		rb_hash_aref((params), ID2SYM(sCA_CERTS))
-#define xmldsig_params_get_signature_algo(params)	rb_hash_aref((params), ID2SYM(sSIGNATURE_ALGO))
-#define xmldsig_params_get_c14n_algo(params)		rb_hash_aref((params), ID2SYM(sC14N_ALGO))
+#define xmldsig_params_get_signature_method(params)	rb_hash_aref((params), ID2SYM(sSIGNATURE_METHOD))
+#define xmldsig_params_get_c14n_method(params)		rb_hash_aref((params), ID2SYM(sC14N_METHOD))
 #define xmldsig_params_get_references(params)		rb_hash_aref((params), ID2SYM(sREFERENCES))
 
 typedef struct sign_params_st {
     VALUE key;
     VALUE cert;
     VALUE ca_certs;
-    VALUE signature_algo;
-    VALUE c14n_algo;
+    VALUE signature_method;
+    VALUE c14n_method;
     VALUE references;
 } sign_params_t;
 
 VALUE cDocument;
 
-static ID sENCODING, sSIGNATURES;
-
-static ID sKEY, sCERT, sCA_CERTS, sSIGNATURE_ALGO,
-	  sC14N_ALGO, sREFERENCES;
 
 static VALUE int_parse_signatures(VALUE self);
 
@@ -77,7 +74,7 @@ xmldsig_doc_new(VALUE self, VALUE raw)
 
     WrapXmlDoc(cDocument, self, doc);
     encoding = xml_dsig_get_encoding(doc);
-    rb_ivar_set(self, sENCODING, encoding);
+    rb_ivar_set(self, rb_intern("encoding"), encoding);
     return self;
 }
 
@@ -95,7 +92,7 @@ xmldsig_doc_bytes(VALUE self)
     if (size <= 0)
        rb_raise(eXMLDSIGError, "Error when encoding the Document");	
     ret_val = rb_str_new2((char *)encoded);
-    rb_enc_associate(ret_val, rb_to_encoding(rb_ivar_get(self, sENCODING)));
+    rb_enc_associate(ret_val, rb_to_encoding(rb_iv_get(self, "encoding")));
 
     return ret_val;
 }
@@ -112,11 +109,11 @@ xmldsig_doc_signatures(VALUE self)
 {
     VALUE signatures;
 
-    signatures = rb_ivar_get(self, sSIGNATURES);
+    signatures = rb_iv_get(self, "signatures");
 
     if (NIL_P(signatures)) {
 	signatures = int_parse_signatures(self);
-	rb_ivar_set(self, sSIGNATURES, signatures);
+	rb_iv_set(self, "signatures", signatures);
     }
 
     return signatures;
@@ -128,17 +125,29 @@ int_init_params(sign_params_t *sign_params, VALUE pkey, VALUE params)
     sign_params->key = pkey;
     sign_params->cert = NIL_P(params) ? Qnil : xmldsig_params_get_cert(params);
     sign_params->ca_certs = NIL_P(params) ? Qnil : xmldsig_params_get_ca_certs(params);
-    sign_params->signature_algo = NIL_P(params) ? Qnil : xmldsig_params_get_signature_algo(params);
-    sign_params->c14n_algo = NIL_P(params) ? Qnil : xmldsig_params_get_c14n_algo(params);
+    sign_params->signature_method = NIL_P(params) ? Qnil : xmldsig_params_get_signature_method(params);
+    sign_params->c14n_method = NIL_P(params) ? Qnil : xmldsig_params_get_c14n_method(params);
     sign_params->references = NIL_P(params) ? Qnil : xmldsig_params_get_references(params);
 
     /* defaults */
-    if (NIL_P(sign_params->signature_algo))
-	sign_params->signature_algo = rb_const_get(mSignatureAlgorithms, sRSA_SHA256);
-    if (NIL_P(sign_params->c14n_algo))
-	sign_params->c14n_algo = rb_const_get(mTransformAlgorithms, sC14N_10);
+    if (NIL_P(sign_params->signature_method))
+	sign_params->signature_method = rb_const_get(mSignatureAlgorithms, sRSA_SHA256);
+    if (NIL_P(sign_params->c14n_method))
+	sign_params->c14n_method = rb_const_get(mTransformAlgorithms, sC14N_10);
     if (NIL_P(sign_params->references)) {
-	/* TODO */
+	VALUE ref_ary, ref, transforms_ary, enveloped_sig;
+       
+	/* default is enveloped signature with SHA-256 */
+	ref_ary = rb_ary_new();
+	transforms_ary = rb_ary_new();
+	enveloped_sig = rb_funcall(cTransform, rb_intern("new"), 1, ID2SYM(sENVELOPED_SIGNATURE));
+	rb_ary_push(transforms_ary, enveloped_sig);
+	ref = rb_funcall(cReference, rb_intern("new"), 1, transforms_ary);
+	rb_ivar_set(ref, sURI, rb_str_new2(""));
+	rb_ivar_set(ref, sDIGEST_METHOD, sSHA256);
+	rb_ivar_set(ref, sTRANSFORMS, transforms_ary);
+	rb_ary_push(ref_ary, ref);
+	sign_params->references = ref_ary;
     }
 }
 
@@ -161,7 +170,7 @@ xmldsig_doc_sign(int argc, VALUE *argv, VALUE self)
     int_init_params(&sign_params, pkey, params);
     GetXmlDoc(self, doc);
     signature = int_doc_sign(doc, &sign_params);
-    signatures = rb_ivar_get(self, sSIGNATURES);
+    signatures = xmldsig_doc_signatures(self);
     rb_ary_push(signatures, signature);
 
     return signature;
@@ -170,16 +179,6 @@ xmldsig_doc_sign(int argc, VALUE *argv, VALUE self)
 void
 Init_xmldsig_document(void)
 {
-    sENCODING = rb_intern("@encoding");
-    sSIGNATURES = rb_intern("@signatures");
-
-    sKEY = rb_intern("key");
-    sCERT = rb_intern("cert");
-    sCA_CERTS = rb_intern("ca_certs");
-    sSIGNATURE_ALGO = rb_intern("signature_algo");
-    sC14N_ALGO = rb_intern("c14n_algo");
-    sREFERENCES = rb_intern("references");
-
     cDocument = rb_define_class_under(mXMLDSIG, "Document", rb_cObject);
     rb_define_singleton_method(cDocument, "new", xmldsig_doc_new, 1);
 
